--- a/src/styles/utils/colors.scss
+++ b/src/styles/utils/colors.scss
@@ -7,9 +7,9 @@ $pdf-darkest: #232933;
 $pdf-med-dark: #535965;
 $pdf-med: #8d929c;
 $pdf-med-light: #cfd3da;
-$pdf-light: #DEE2E9;
+$pdf-light: #dee2e9;
 $pdf-lightest: #eef1f7;
-$pdf-lightest-transparent: rgba(215, 220, 219,33%) ;
+$pdf-lightest-transparent: rgba(215, 220, 219, 33%);
 
 // Muted blues
 $pdf-blue-muted-medium-light: #8daacd;
@@ -28,3 +28,6 @@ $color-variables: (
   pdf-blue-muted-medium-light: $pdf-blue-muted-medium-light,
   pdf-blue-muted-medium: $pdf-blue-muted-medium,
 );
+
+// Shadow color
+$pdf-shadow: 0px 2px 8px 0px rgba(141, 146, 156, 0.24);
